<resources>
    <string name="app_name">Task Manager</string>
    <string name="Button1">Novi zadatak</string>
    <string name="Button2">Statistika</string>
    <string name="Button3">Dodaj</string>
    <string name="Button4">Otkazi</string>
    <string name="Button5">Izaberi</string>
    <string name="Button6">Otkazi</string>
    <string name="backButton">Nazad</string>
    <string name="editText">Ime zadatka...</string>
    <string name="editText2">Zadatak...</string>
    <string name="textView2">Vreme isteka zadatka</string>
    <string name="checkBox">Podseti me 15min pre isteka vremena!</string>
    <string name="ArrayList">Naziv zadatka...</string>
    <string name="ArrayListDate">-Datum-</string>

    <string name="Monday">Ponedeljak</string>
    <string name="Tuesday">Utorak</string>
    <string name="Wednesday">Sreda</string>
    <string name="Thursday">Četvrtak</string>
    <string name="Friday">Petak</string>
    <string name="Saturday">Subota</string>
    <string name="Sunday">Nedelja</string>
    <string name="Today">Danas</string>
    <string name="Tomorrow">Sutra</string>

</resources>
