<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_zadatak_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/dodaj_zadatak"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ra210_2014.com.example.student.taskmanager.ZadatakLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2">
        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/bojaEditText"
            android:textColorHint="@color/bojaEditText"

            android:hint="@string/editText"
            android:gravity="left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:id="@+id/linearLayout3">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textView2"
            android:textColor="@color/bojaEditText"
            android:textAlignment="center"
            android:gravity="center"

            android:layout_weight="4.32" />
        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:srcCompat="@android:drawable/ic_menu_add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:id="@+id/linearLayout4">
        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:lines="8"
            android:maxLines="8"
            android:layout_marginTop="22dp"
            android:hint="@string/editText2"
            android:ems="10"
            android:textColorHint="@color/bojaEditText2"
            android:textColor="@color/bojaEditText2"
            android:inputType="textMultiLine"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout5"
        android:layout_below="@+id/linearLayout4">
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textColor="@color/zelena"
            android:text="@string/checkBox"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout5"
        android:id="@+id/linearLayout6">
        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_weight="3"
            app:srcCompat="@android:color/holo_red_dark" />
        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_weight="3"
            app:srcCompat="@android:color/holo_orange_light" />
        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:layout_weight="3"
            app:srcCompat="@android:color/holo_green_dark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Button3"/>
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Button4"/>

    </LinearLayout>


</RelativeLayout>
